--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ nav, ul {
 }
 
 header button {
+	border: none;
 	color: white;
 	background-color: #000;
 	border-radius: 1em;
@@ -311,30 +312,66 @@ main {
 	margin: 10% 0 10% 0;
 }
 
-.featured_section_container { /* Пробую сделать адаптивную сетку для того чтобы разместить ровно текст и вместить большие фото во вложенный контейнер */
+.featured_section_container { 
 	display: grid;
 	grid-template-rows: repeat(2, auto); 
 	grid-template-columns: auto;
-	width: 80%;
+	width: 70%;
 	height: auto;
+}
+
+.featured_section_container span {
+	font-size: 0.8em;
+	cursor: pointer;
+	margin: 5% 0 0 43%;
+}
+
+.featured_section_container span:hover {
+	color: gray;
 }
 
 .picture_div {
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: repeat(3, 1fr); 
 	grid-template-rows: auto;
 	height: 35vh;
 }
 
 .featured_section img {
-	width: 100%;
 	height: 100%;
+	width: 95%;
 }
 
 .picture_div div { /* styles for center div */
 	background-image: url(image/featured_picture_2.jpg);
 	background-size: cover;
+	width: 95%;
 	height: 100%;
+	overflow: hidden;
+}
+
+.div_div_ {
+	padding: 8%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: center;
+}
+
+.picture_div button {
+	font-size: 0.8em;
+	font-weight: 300;
+	color: white;
+	background-color: #000;
+	border-radius: 1em;
+	width: 9vw;
+	padding: 2% 0 2% 0;
+	transition: color 0.3s ease;
+	border: none;
+	margin-top: 100%;
+}
+.picture_div button:hover {
+	color: gray;
 }
 
 /* featured_text */
@@ -342,11 +379,20 @@ main {
 	font-size: 1.5em;
 	margin-bottom: 2%;
 }
-
 .featured_section p {
-	font-weight: 200;
+	font-weight: 300;
 	width: 40vw;
 	margin-bottom: 5%;
+}
+.picture_div h4 {
+	letter-spacing: normal;
+	text-transform: none;
+	font-size: 1em;
+}
+.picture_div p {
+	margin: 0;
+	font-weig ht: 200;
+	font-size: 0.8em;
 }
 /* featured_end */
 
@@ -376,6 +422,9 @@ main {
 	.section_h1 {
 		grid-template-rows: 40% ;
 		grid-template-columns: auto;
+	}
+	.section_h1 img {
+		display: none;
 	}
 	.hero_div div {
 		padding: 15vmin 0 5vmin 10vmin;
