--- a/style.css
+++ b/style.css
@@ -78,12 +78,13 @@ main {
 }
 .hero_div h1 {
 	margin-top: 2vw;
-	font-size: 64px;
+	font-size: 3.5em;
 	width: 70%;
 }
 .hero_div p {
 	margin-top: 2vw;
-	width: 85%;
+	width: 83%;
+	font-weight: 300;
 }
 
 .hero_div a {
@@ -308,15 +309,16 @@ main {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 50vh;
-	margin: 10% 0 10% 0;
+	height: 70vh;
+	background-color: #F7F7F7;	
 }
 
 .featured_section_container { 
 	display: grid;
 	grid-template-rows: repeat(2, auto); 
 	grid-template-columns: auto;
-	width: 70%;
+	width: 80%;
+	margin: 5% 0 5% 0;
 	height: auto;
 }
 
@@ -396,6 +398,99 @@ main {
 }
 /* featured_end */
 
+.our_team {
+	display: flex;
+	justify-content: center;
+}
+
+.our_team_container {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: 40vh;
+	justify-items: center;
+	width: 90%;
+	padding: 10% 5% 10% 5%;
+}
+
+.our_team_content {
+	display: flex;
+	flex-direction: column;
+	margin-left: 30%;
+}
+
+.worker_span {
+	display: flex;
+	align-items: center;	
+	margin-bottom: 20%;
+}
+
+.worker_rewiew {
+	width: 20vw;
+	margin-left: 8%;
+}
+
+.our_team img {
+	width: 80px; 
+  	height: 80px;  
+  	border-radius: 50%;
+  	object-fit: cover;
+  	flex-shrink: 0;
+	border: 3px solid #CEC4BC;
+}
+
+/* Text */
+
+.our_team_hero h2 {
+	font-size: 2em;
+	font-weight: 300;
+	margin: 0 0 5% 0;
+}
+
+.our_team_hero p {
+	font-size: 0.8em;
+	font-weight: 200;
+	margin: 0 0 15% 0;
+}
+
+.our_team_hero span {
+	cursor: pointer;
+	margin-left: 10%;
+}
+
+.our_team_hero span:hover {
+	color: gray;
+}
+/* Text_end */
+
+.pre_footer {
+	height: 30vh;
+	background-color: #CEC4BC;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.pre_footer div {
+	width: 70%;
+}
+
+/* Text */
+.pre_footer p {
+	text-transform: uppercase;
+}
+
+.pre_footer h2 {
+	width: 80%;
+	font-size: 2.5em;
+}
+.pre_footer span {
+	cursor: pointer;
+}
+.pre_footer span:hover {
+	color: gray;
+}
+/* Text_end */
+
 /*Media*/
 @media (min-width: 1200px) {
 	.section_h1 {
@@ -458,6 +553,30 @@ main {
 	}
 	header img {
 		width: 30vw;
+	}
+	.featured_section {
+		height: auto;
+	}
+	.featured_section_container {
+		justify-items: center;
+	}
+	.picture_div {
+		grid-template-rows: repeat(3, 1fr);
+		grid-template-columns: auto;
+		height: auto;
+		justify-items: center;
+	}
+	.featured_section img {
+		width: 80%;
+		height: 95%;
+		padding: 1% 0 1% 0;
+	}
+	.picture_div div {
+		width: 80%;
+		height: 95%;
+	}
+	.featured_section_container span {
+		margin: 0;
 	}
 }
 @media (max-width: 600px) {
