--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h4 {
 /* Параметры для всех*/
 
 header {
+	background-color: rgb(255, 255, 255);
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: auto;
@@ -26,6 +27,20 @@ header {
 	width: 100%;
 	height: 9vh;
 	list-style: none;
+}
+
+.burger_menu {
+	display: flex;
+	flex-direction: column;
+	cursor: pointer;
+	margin: 20px;
+}
+.burger_line {
+	height: 2px;
+	width: 30px;
+	background-color: #333;
+	margin: 3px 0;
+	transition: 0.4s;
 }
 
 nav, ul {
@@ -48,7 +63,15 @@ header img {
 	height: 20%;
 }
 
-ul, li:not(:last-child) {
+header li {
+	cursor: pointer;
+}
+
+header li:hover {
+	color: gray;
+}
+
+header ul, header li:not(:last-child) {
 	margin-right: 3vw
 }
 /*Header*/
@@ -531,14 +554,48 @@ main {
 	.div_div_ {
 		padding: 12%;
 	}
+	.burger_menu {
+		display: none;
+	}
+	.hidden_button {
+		display: none;
+	}
 }
 
 @media (max-width: 1200px) {
 	.our_firm span {
 		width: 300%;
 	}
+	header {
+		grid-template-columns: repeat(3, 50% 25% 25%);
+	}
 	nav {
 		display: none;
+		background-color: rgb(255, 255, 255);
+		position: absolute;
+		top: 7vh;
+		left: 0;
+		width: 100%;
+	}
+	.desktop_button {
+		display: none;
+	}
+	.hidden_button {
+		min-height: 4vh;
+		min-width: 15vw;
+	}
+	nav ul {
+		list-style: none;
+		padding: 0;
+	}
+	nav ul li {
+		padding: 15px;
+	}
+	.burger_menu.active + nav {
+		display: block;
+	}
+	nav ul {
+		justify-content: center;
 	}
 	.hero_div h1 {
 		line-height: 90%;
@@ -549,6 +606,12 @@ main {
 }
 
 @media (max-width: 900px) {
+	header {
+		grid-template-columns: repeat(2, 1fr);
+	}
+	.hidden_button {
+		display: none;
+	}
 	.section_h1 {
 		grid-template-rows: 40% ;
 		grid-template-columns: auto;
