--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ nav, ul {
 	align-items: center;
 }
 
-header button {
+.desktop_button {
 	border: none;
 	color: white;
 	background-color: #000;
@@ -56,6 +56,21 @@ header button {
 	width: 12vw;
 	padding: 1% 0 1% 0;
 	transition: color 0.3s ease;
+}
+
+.ul_button {
+	border: none;
+	color: white;
+	background-color: #000;
+	border-radius: 1em;
+	width: 12vw;
+	padding: 1% 0 1% 0;
+	height: 3vh;
+	font-size: 0.8em;
+	flex-shrink: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 header img {
@@ -576,7 +591,9 @@ main {
 		position: absolute;
 		top: 7vh;
 		left: 0;
+		height: 4vh;
 		width: 100%;
+		align-content: center;
 	}
 	.desktop_button {
 		display: none;
@@ -588,15 +605,13 @@ main {
 	nav ul {
 		list-style: none;
 		padding: 0;
+		justify-content: center;
 	}
 	header li:nth-last-child(2) {
 		margin-right: 3vw;
 	}
 	.burger_menu.active + nav {
 		display: block;
-	}
-	nav ul {
-		justify-content: center;
 	}
 	.hero_div h1 {
 		line-height: 90%;
@@ -610,15 +625,21 @@ main {
 	header {
 		grid-template-columns: repeat(2, 1fr);
 	}
-	.hidden_button {
-		display: none;
-	}
 	.ul_button {
 		height: 3vh;
-		min-width: 10vw;
-		font-size: 0.6em;
-		font-weight: 500;
+		min-width: 100px;
+		font-size: 0.8em;
+		flex-shrink: 0;
 	}
+	ul {
+		margin-left: 8vw;
+	}
+	header li {
+		margin-right: 8vw
+	}
+	header li:nth-last-child(2) { /* Предпоследний элемент, чтобы не зажимать button в правый угол*/
+		margin-right: 8vw;
+	}	
 	.section_h1 {
 		grid-template-rows: 40% ;
 		grid-template-columns: auto;
@@ -680,10 +701,55 @@ main {
 	.featured_section_container span {
 		margin: 0;
 	}
+	header li {
+		font-size: 0.8em;
+	}
+	ul {
+		margin-left: 6vw;
+	}
+	header li {
+		margin-right: 6vw
+	}
+	header li:nth-last-child(2) { /* Предпоследний элемент, чтобы не зажимать button в правый угол*/
+		margin-right: 6vw;
+	}
 }
 @media (max-width: 600px) {
 	.third_section {
 		align-items: flex-start;
 		padding-left: 5vw;
 	} 
+	header li {
+		font-size: 0.7em;
+	}
+	ul {
+		margin-left: 4vw;
+	}
+	header li {
+		margin-right: 5vw
+	}
+	header li:nth-last-child(2) { /* Предпоследний элемент, чтобы не зажимать button в правый угол*/
+		margin-right: 5vw;
+	}
+}
+@media (max-width: 420px) {
+	.third_section {
+		align-items: flex-start;
+		padding-left: 5vw;
+	} 
+	.ul_button {
+		display: none;
+	}
+	header li {
+		font-size: 0.6em;
+	}
+	ul {
+		margin-left: 4vw;
+	}
+	header li {
+		margin-right: 4vw
+	}
+	header li:nth-last-child(2) { /* Предпоследний элемент, чтобы не зажимать button в правый угол*/
+		margin-right: 4vw;
+	}
 }
