--- a/style.scss
+++ b/style.scss
@@ -9,7 +9,13 @@
 * { // По логике здесь должно быть больше свойств
     font-family: "Poppins";
 }
- 
+
+h1 {
+	margin-top: 2vw;
+	font-size: 3.5em;
+	width: 70%;
+}
+
 h4 { // Указываю для всех h4
     font-size: 1.2em;
     letter-spacing: 2px;
@@ -88,15 +94,14 @@ main {
     overflow: hidden;
 }
 
-.left_div_first_section{
+.hero_section {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: 100%;
 	background-color: #ECE7E4;
 }
 
-// Заменить название класса
-.hero_div div {
+.hero_left_container {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
@@ -104,21 +109,13 @@ main {
 	padding: 15vmin 0 0 8vmin;
 }
 
-// Выглядит как алкоголизм
-.hero_image img {
+.hero_right_container img {
 	width: 100%;
 	height: 100%;
 }
 
-// Можно в начале файла указать h1 один раз 
-.hero_div h1 {
-	margin-top: 2vw;
-	font-size: 3.5em;
-	width: 70%;
-}
-
 // Название 
-.hero_div p {
+.hero_section p {
 	margin-top: 2vw;
 	width: 83%;
 	font-weight: 300;
