--- a/styles2.css
+++ b/styles2.css
@@ -11,6 +11,12 @@
   font-family: "Poppins";
 }
 
+h1 {
+  margin-top: 2vw;
+  font-size: 3.5em;
+  width: 70%;
+}
+
 h4 {
   font-size: 1.2em;
   letter-spacing: 2px;
@@ -88,14 +94,14 @@ main {
   overflow: hidden;
 }
 
-.left_div_first_section {
+.hero_section {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 100%;
   background-color: #ECE7E4;
 }
 
-.hero_div div {
+.hero_left_container {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -103,18 +109,12 @@ main {
   padding: 15vmin 0 0 8vmin;
 }
 
-.hero_image img {
+.hero_right_container img {
   width: 100%;
   height: 100%;
 }
 
-.hero_div h1 {
-  margin-top: 2vw;
-  font-size: 3.5em;
-  width: 70%;
-}
-
-.hero_div p {
+.hero_section p {
   margin-top: 2vw;
   width: 83%;
   font-weight: 300;
