--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,8 @@
 /* Максимум который можно вписать в * или в переменные, нужно реализовать
-	1.Для начала иду к ии, спрашиваю как пользоваться SCSS, чтобы сразу начать применять
-	2.Начало, анализирую по строчно CSS, выписываю сюда как бы я записал и укоротил код, упростил или оптимизировал
-    3.Решил выписать все с комментариями, чтобы иметь файл SCSS для поддержки
-    4.Часто встречающиеся элементы вынести в переменные
-    5.Использовать вложенность
-    6.Вынести media в partials файл    
+	1.Понял что очень сложно корректировать код, лучше писать изначально с заделом на поддержку и изменения, как бы это базово не звучало    
 */ 
-* { // По логике здесь должно быть больше свойств
+// For all
+* { 
     font-family: "Poppins";
 }
 
@@ -23,15 +19,19 @@ h4 { // Указываю для всех h4
     font-weight: 300;
 }
 
+.for_repeat_section { 
+	height: 50vh;
+}
+
 .only_back_image_p { // Для всех <p> что в пустых секциях с back-image
     font-size: 0.8em;
     font-weight: 200;
     width: 80%;
 }
-
-header li:hover { // Много есть классов hover с таким же свойством, обьеденить для экономии кода
+.pre_footer span:hover, .our_team_hero span:hover, header li:hover, .hero_section a:hover, header button:hover, .featured_section_container span:hover, .feature_center_div button:hover {
 	color: gray;
 }
+// For all
 
 header { // Первое указание свойств header, буду нумеровать для выявления лишних строк
     background-color: white;  
@@ -49,13 +49,13 @@ header { // Первое указание свойств header, буду нум
 	flex-direction: column;
 	cursor: pointer;
 	margin: 20px;
-        .burger_line {
-            height: 2px;
-            width: 30px;
-            background-color: #333;
-            margin: 3px 0;
-            transition: 0.4s;
-        }
+}
+.burger_line {
+    height: 2px;
+    width: 30px;
+    background-color: #333;
+    margin: 3px 0;
+    transition: 0.4s;
 }
 
 nav, ul { // Вроде как локанично, только хотелось бы все дальнейшие корректировки видеть так же здесь
@@ -64,7 +64,7 @@ nav, ul { // Вроде как локанично, только хотелось
     cursor: pointer;
 }
 
-.desktop_button, .ul_button {
+.desktop_button, .ul_button, .feature_center_div button {
 	border: none;
 	color: white;
 	background-color: #000;
@@ -101,7 +101,7 @@ main {
 	background-color: #ECE7E4;
 }
 
-.hero_left_container {
+.hero_left_container div{
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
@@ -113,97 +113,71 @@ main {
 	width: 100%;
 	height: 100%;
 }
-
-// Название 
+ 
 .hero_section p {
 	margin-top: 2vw;
 	width: 83%;
 	font-weight: 300;
 }
 
-// Странные значения для margin, и название 
-.hero_div a {
-	margin: 4vw 0 2vh 2vw;
+.hero_section a {
+	margin: 4vh 0 2vh 2vw;
 	transition: color 0.3s ease;
 }
 
-// Выше должен был наткнуться на нужный комментарий, поменял название первого класса не забудь
-.hero_div a:hover, header button:hover {
-	color: gray;
-}
+//  hero-section-end
 
-// first_section или иначе
-
-// Это название секции нужно сменить на ясное 
-.our_firm {
+.our_firm_section {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	height: 70vh;
 }
 
 .our_firm_container {
-	width: 50%;
-	height: 50%;
-	margin: 7% 0 5% 0; // Значения для соотвествия макету
 	display: flex;
+	width: 50%;
+	height: 80%;
+}
+// Хочу уменьшить шрифт в media для того чтобы он помещался в container
+
+.our_firm_container span {
+	margin-right: 5%;
 }
 
-// Непонятно что это и для чего, точнее название 
-.our_firm span {
-	width: 150%;
-}
-
-// Явно указать в начале документа самое популярное значение для h2
-.our_firm h2 {
+.our_firm_section h2 {
 	font-size: 2em;
 }
 
-// Какой текст?
-.text {
+.our_firm_container_div {
 	display: grid;
-	grid-template-rows: repeat(4, auto);
-	grid-template-columns: auto;
+	grid-template-rows: repeat(4, 1fr);
 }
 
-// Сменю название и станет ясно
-.text p:not(:first-child) {
+.our_firm_container_div p:not(:first-child) {
 	margin-top: 4%;
 }
 
-// Соотвественно и тут
-.text p {
+.our_firm_container_div p {
 	font-weight: 300;
 }
 
-// Я бы назвал так предпоследний div 
-.worker_div {
+.our_firm_worker_div {
 	display: flex;
 	align-items: center;
 	margin-top: 5%;
 }
 
-// Нужно сделать это изображение адаптивным под мобильные, выглядит большим
-.worker_div img {
-	width: 80px; 
-  	height: 80px;  
-  	border-radius: 50%;
-  	object-fit: cover;
-  	flex-shrink: 0;
-}
-
-// Второй h2, значения не совпали 
-.worker_div h2 {
+.our_firm_worker_div h2 {
 	font-size: 1.5em;
 }
 
-// После смены названий может и заиграет, предполагаю что можно указать яснее 
-.text .worker_div p { /* Worker margin p no need*/
+.our_firm_worker_div p { /* Worker margin p no need*/
 	margin: 0;
 }
 
-// Оставить комментарий
-.worker_div span {
+.our_firm_worker_div span { // Для текста рядом с фото работника
 	margin: 0 0 0 7%;
 }
 
@@ -211,35 +185,28 @@ main {
 
 .third_section {
 	background: url("image/third_section.jpg");
-	background-size: cover; // По логике нужно использовать contain, будет видно все изображение, а cover просто заполняет весь контейнер 
+	background-size: cover ;  
 	background-repeat: no-repeat;
   	width: 100%;
-  	height: 50vh; // Сделать для всех секциий, если нужна другая величина указывать явно
-	margin-top: 5%;
-
   	display: flex;
-	flex-direction: column; // Этот код используется более 1 раза, можно обьеденить с другой секцией 
+	flex-direction: column;
 	align-items: flex-end; 
 	justify-content: center;
 }
 
-// Тоже встречается 2 раза 
 .third_section div {
 	margin-right: 5%;
 }
 
-// Проверить на повтор 
 .third_section p {
 	width: 25vw;
 }
 
 // Third_section-end
 
-
 .our_process {
 	background-color: white;
 	width: 100%;
-	height: 45vh;
 	display: flex;
 	align-items: center;
 }
@@ -258,57 +225,52 @@ main {
 	grid-template-rows: auto;
 }
 
-// Переименовать в out_process_content_div, идеальный пример где применить вложенность
-.our_item {
+// Переименовано из our_item
+.our_process_content_div {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
-// Есть ли такой h2? Пусть весь текст будет в отдельном файле, использовать partials 
 .our_process h2 {
 	margin: 1% 0 2% 0;
 	font-size: 2.5em;
 	font-weight: 300;
 }
 
-.our_item span {
+.our_process_content_div span {
 	margin: 5% 0 5% 0;
 }
 
-.our_item p {
+.our_process_content_div p {
 	align-items: center;
 	width: 80%;
 }
 
 .stairs_section {
 	background-image: url("image/stairs.jpg");
-	background-size: cover; // Та же история с cover 
+	background-size: cover;  
 	background-repeat: no-repeat;
-  	width: 100%;
-	height: 50vh;  // Блок кода должен быть указан 1 раз в начале
 	margin-top: 10%;
+	height: 55vh;
 	display: flex;
-	flex-direction: column; // Проверить на повтор 
+	flex-direction: column;  
 	justify-content: center;
 	align-items: flex-end;
-	text-transform: uppercase; // Кажется это уже было, зачем то указано еще раз 
+	text-transform: uppercase;  
 }
 
-// Можно назвать stairs_section_container
-.stairs_section div {
+.stairs_section_container {
 	margin-right: 5%;
 }
 
-// Не видел ли я тоже самое в third section
 .stairs_section p {
 	width: 20vw;
 }
 
 // Stairs_section-end
 
-// Переименовать в happy_section
-.happy_customers {
+.happy_section {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -317,8 +279,7 @@ main {
 	height: 40vh;
 }
 
-// Переименовать в happy_section_container
-.happy_container {
+.happy_section_container {
 	height: 20vh;
 	width: 80%;
 	display: grid; 
@@ -326,28 +287,25 @@ main {
 	grid-template-columns: repeat(2, 1fr);
 }
 
-// happy_brand_container 
-.brand_container {
+.happy_brand_container {
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
 }
 
-.brand_container:first-child {
+.happy_brand_container:first-child {
 	margin-bottom: 15%;
 }
 
 /* Text */
-.happy_container span {
+.happy_section_container span {
 	font-weight: 200;
 }
 
-// Кажется было
 .happy_container p {
 	font-weight: 200;
 }
 
-// Еще не встречал
 .happy_container h3 {
 	font-size: 2em;
 	margin-bottom: 4%;
@@ -355,24 +313,21 @@ main {
 
 /* happy_section-end */
 
-// Было кроме image конечно
-.whool {
+.whool_section {
 	background-image: url(image/whool.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	width: 100%;
-	height: 50vh;
 	display: flex;
 	align-items: center;
 }
 
-.whool div {
+.whool_section_content {
 	margin-left: 5%;
 }
 
 /* whool_section-end */
 
-// В норме
 .featured_section {
 	display: flex;
 	align-items: center;
@@ -384,47 +339,37 @@ main {
 .featured_section_container { 
 	display: grid;
 	grid-template-rows: repeat(2, auto); 
-	grid-template-columns: auto; // И так будет auto, проверить 
 	width: 80%;
 	margin: 5% 0 5% 0;
-	height: auto; // Это скорее всего нужно для адаптива
 }
 
 .featured_section_container span {
 	font-size: 0.8em;
 	cursor: pointer;
-	margin: 5% 0 0 43%; // Не всегда работает точно 
+	margin: 5% 0 0 43%;
 }
 
-// Ты знаешь что делать
-.featured_section_container span:hover {
-	color: gray;
+.featured_section img {
+	height: 100%; // Без этого  image уменьшаются
+	width: 95%;
 }
 
-.picture_div {
+.featured_picture_content {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr); 
 	grid-template-rows: auto;
 	height: 35vh;
 }
 
-// Кажется можно без высоты
-.featured_section img {
-	height: 100%;
-	width: 95%;
-}
-
-// Ничего непонятно, я про название класса
-.picture_div div { /* styles for center div */
+.featured_picture_content div { /* styles for center div */
 	background-image: url(image/featured_picture_2.jpg);
-	background-size: cover; // Может contain?
+	background-size: cover; 
 	width: 95%;
-	height: 100%; // Нужно ли ?
+	height: 100%; // Да это свойство нужно 
 	overflow: hidden;
 }
 
-// Название!
-.div_div_ {
+.feature_center_div {
 	padding: 8%; 
 	display: flex;
 	flex-direction: column;
@@ -432,27 +377,16 @@ main {
 	justify-content: center;
 }
 
-// Кажется я такое уже видел, я про свойства
-.picture_div button {
+.feature_center_div button {
 	font-size: 0.8em;
 	font-weight: 300;
-	color: white;
-	background-color: #000;
-	border-radius: 1em; // Опять же нужно ли ?
 	width: 9vw; 
 	padding: 2% 0 2% 0;
-	transition: color 0.3s ease;
-	border: none;
 	margin-top: 100%; // Это чтобы он уперся в дно дива, хм, может есть способ логичнее 
 }
 
-// Ну ты знаешь
-.picture_div button:hover {
-	color: gray;
-}
-
 /* featured_text */
-// Проверить на повторение 
+
 .featured_section h2 {
 	font-size: 1.5em;
 	margin-bottom: 2%;
@@ -462,22 +396,22 @@ main {
 	width: 40vw;
 	margin-bottom: 5%;
 }
-// Может тогда использовать другой тег ?
-.picture_div h4 {
+
+.feature_center_div h4 {
 	letter-spacing: normal;
 	text-transform: none;
 	font-size: 1em;
 }
-.picture_div p {
+
+.feature_center_div p {
 	margin: 0;
 	font-weight: 200;
 	font-size: 0.8em;
 }
 
-/* featured_end */
+/* featured-end */
 
-// В целом название норм, но кажется тут не хватает section
-.our_team {
+.our_team_section {
 	display: flex;
 	justify-content: center;
 }
@@ -491,8 +425,7 @@ main {
 	padding: 10% 5% 10% 5%;
 }
 
-// Мне кажется или это посыпется при изменении разрешения, я про все что ниже до текста
-.our_team_content {
+.our_team_content { 
 	display: flex;
 	flex-direction: column;
 	margin-left: 30%;
@@ -509,7 +442,7 @@ main {
 	margin-left: 8%;
 }
 
-.our_team img {
+.our_team_section img, .our_firm_worker_div img  {
 	width: 80px; 
   	height: 80px;  
   	border-radius: 50%;
@@ -537,10 +470,6 @@ main {
 	margin-left: 10%;
 }
 
-.our_team_hero span:hover {
-	color: gray;
-}
-
 /* Our_section-end */
 
 .pre_footer {
@@ -554,7 +483,6 @@ main {
 .pre_footer div {
 	width: 70%;
 }
-
 /* Text */
 .pre_footer p {
 	text-transform: uppercase;
@@ -565,18 +493,11 @@ main {
 	font-size: 2.5em;
 }
 
-// Где то видел 
 .pre_footer span {
 	cursor: pointer;
 }
 
-// Да да
-.pre_footer span:hover {
-	color: gray;
-}
-
 /* Pre_footer-end */
-
 
 .footer {
 	height: 15vh;
@@ -589,14 +510,11 @@ main {
 
 .left_div {
 	width: 80%;
+	font-weight: 200;
 }
 
 .left_div img {
 	margin-bottom: 5%;
-}
-
-.left_div {
-	font-weight: 200;
 }
 
 .right_div {
@@ -612,12 +530,10 @@ main {
 
 // Media
 @media (min-width: 1200px) {
-	.section_h1 {
+	.hero_section {
 		height: 70vh;
 	}
-	.div_div_ {
-		padding: 12%;
-	}
+	.hero_left_container
 	.burger_menu {
 		display: none;
 	}
@@ -627,9 +543,6 @@ main {
 }
 
 @media (max-width: 1200px) {
-	.our_firm span {
-		width: 300%;
-	}
 	nav {
 		display: none;
 		background-color: white;
@@ -644,21 +557,20 @@ main {
 		display: none;
 	}
 	nav ul {
-		list-style: none;
-		padding: 0;
 		justify-content: center;
 	}
+
 	header li:nth-last-child(2) {  // Чтобы button не лип к li
 		margin-right: 3vw;
 	}
 	.burger_menu.active + nav {
 		display: block;
 	}
-	.hero_div h1 {
+	.hero_left_container h1 {
 		line-height: 90%;
 	}
-	.hero_div div {
-		padding: 15vmin 0 0 2vw;
+	.hero_left_container div {
+		padding: 10vmin 0 0 5vw;
 	}
 }
 
@@ -681,14 +593,14 @@ main {
 	header li:nth-last-child(2) { /* Предпоследний элемент, чтобы не зажимать button в правый угол*/
 		margin-right: 8vw;
 	}	
-	.section_h1 {
+	.hero_section {
 		grid-template-rows: 40% ;
 		grid-template-columns: auto;
 	}
-	.section_h1 img {
+	.hero_section img {
 		display: none;
 	}
-	.hero_div div {
+	.hero_left_container div {
 		padding: 15vmin 0 5vmin 10vmin;
 	}
 	/* Сделать section featured адаптивным при разрешении ниже 900px */
@@ -698,16 +610,10 @@ main {
 }
 
 @media (max-width: 768px) {
-	.section_h1 {
+	.hero_section  {
 		grid-template-columns: 1fr;
 		grid-template-rows: auto auto;
 		gap: 20px;
-	}
-	.our_item p { /* Недоработанный адаптивный дизайн */
-		display: none;
-	}
-	.our_firm_container {
-		flex-direction: column;
 	}
 	.text p {
 		margin-top: 4%;
