--- a/styles2.css
+++ b/styles2.css
@@ -1,11 +1,6 @@
 @charset "UTF-8";
 /* Максимум который можно вписать в * или в переменные, нужно реализовать
-	1.Для начала иду к ии, спрашиваю как пользоваться SCSS, чтобы сразу начать применять
-	2.Начало, анализирую по строчно CSS, выписываю сюда как бы я записал и укоротил код, упростил или оптимизировал
-    3.Решил выписать все с комментариями, чтобы иметь файл SCSS для поддержки
-    4.Часто встречающиеся элементы вынести в переменные
-    5.Использовать вложенность
-    6.Вынести media в partials файл    
+	1.Понял что очень сложно корректировать код, лучше писать изначально с заделом на поддержку и изменения, как бы это базово не звучало    
 */
 * {
   font-family: "Poppins";
@@ -24,13 +19,17 @@ h4 {
   font-weight: 300;
 }
 
+.for_repeat_section {
+  height: 50vh;
+}
+
 .only_back_image_p {
   font-size: 0.8em;
   font-weight: 200;
   width: 80%;
 }
 
-header li:hover {
+.pre_footer span:hover, .our_team_hero span:hover, header li:hover, .hero_section a:hover, header button:hover, .featured_section_container span:hover, .feature_center_div button:hover {
   color: gray;
 }
 
@@ -51,7 +50,8 @@ header {
   cursor: pointer;
   margin: 20px;
 }
-.burger_menu .burger_line {
+
+.burger_line {
   height: 2px;
   width: 30px;
   background-color: #333;
@@ -65,7 +65,7 @@ nav, ul {
   cursor: pointer;
 }
 
-.desktop_button, .ul_button {
+.desktop_button, .ul_button, .feature_center_div button {
   border: none;
   color: white;
   background-color: #000;
@@ -101,7 +101,7 @@ main {
   background-color: #ECE7E4;
 }
 
-.hero_left_container {
+.hero_left_container div {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -120,74 +120,61 @@ main {
   font-weight: 300;
 }
 
-.hero_div a {
-  margin: 4vw 0 2vh 2vw;
+.hero_section a {
+  margin: 4vh 0 2vh 2vw;
   transition: color 0.3s ease;
 }
 
-.hero_div a:hover, header button:hover {
-  color: gray;
-}
-
-.our_firm {
+.our_firm_section {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  height: 70vh;
 }
 
 .our_firm_container {
-  width: 50%;
-  height: 50%;
-  margin: 7% 0 5% 0;
   display: flex;
+  width: 50%;
+  height: 80%;
 }
 
-.our_firm span {
-  width: 150%;
+.our_firm_container span {
+  margin-right: 5%;
 }
 
-.our_firm h2 {
+.our_firm_section h2 {
   font-size: 2em;
 }
 
-.text {
+.our_firm_container_div {
   display: grid;
-  grid-template-rows: repeat(4, auto);
-  grid-template-columns: auto;
+  grid-template-rows: repeat(4, 1fr);
 }
 
-.text p:not(:first-child) {
+.our_firm_container_div p:not(:first-child) {
   margin-top: 4%;
 }
 
-.text p {
+.our_firm_container_div p {
   font-weight: 300;
 }
 
-.worker_div {
+.our_firm_worker_div {
   display: flex;
   align-items: center;
   margin-top: 5%;
 }
 
-.worker_div img {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  object-fit: cover;
-  flex-shrink: 0;
-}
-
-.worker_div h2 {
+.our_firm_worker_div h2 {
   font-size: 1.5em;
 }
 
-.text .worker_div p { /* Worker margin p no need*/
+.our_firm_worker_div p { /* Worker margin p no need*/
   margin: 0;
 }
 
-.worker_div span {
+.our_firm_worker_div span {
   margin: 0 0 0 7%;
 }
 
@@ -196,8 +183,6 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  height: 50vh;
-  margin-top: 5%;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -215,7 +200,6 @@ main {
 .our_process {
   background-color: white;
   width: 100%;
-  height: 45vh;
   display: flex;
   align-items: center;
 }
@@ -234,7 +218,7 @@ main {
   grid-template-rows: auto;
 }
 
-.our_item {
+.our_process_content_div {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -246,11 +230,11 @@ main {
   font-weight: 300;
 }
 
-.our_item span {
+.our_process_content_div span {
   margin: 5% 0 5% 0;
 }
 
-.our_item p {
+.our_process_content_div p {
   align-items: center;
   width: 80%;
 }
@@ -259,9 +243,8 @@ main {
   background-image: url("image/stairs.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100%;
-  height: 50vh;
   margin-top: 10%;
+  height: 55vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -269,7 +252,7 @@ main {
   text-transform: uppercase;
 }
 
-.stairs_section div {
+.stairs_section_container {
   margin-right: 5%;
 }
 
@@ -277,7 +260,7 @@ main {
   width: 20vw;
 }
 
-.happy_customers {
+.happy_section {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -286,7 +269,7 @@ main {
   height: 40vh;
 }
 
-.happy_container {
+.happy_section_container {
   height: 20vh;
   width: 80%;
   display: grid;
@@ -294,18 +277,18 @@ main {
   grid-template-columns: repeat(2, 1fr);
 }
 
-.brand_container {
+.happy_brand_container {
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
 
-.brand_container:first-child {
+.happy_brand_container:first-child {
   margin-bottom: 15%;
 }
 
 /* Text */
-.happy_container span {
+.happy_section_container span {
   font-weight: 200;
 }
 
@@ -319,17 +302,16 @@ main {
 }
 
 /* happy_section-end */
-.whool {
+.whool_section {
   background-image: url(image/whool.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  height: 50vh;
   display: flex;
   align-items: center;
 }
 
-.whool div {
+.whool_section_content {
   margin-left: 5%;
 }
 
@@ -345,10 +327,8 @@ main {
 .featured_section_container {
   display: grid;
   grid-template-rows: repeat(2, auto);
-  grid-template-columns: auto;
   width: 80%;
   margin: 5% 0 5% 0;
-  height: auto;
 }
 
 .featured_section_container span {
@@ -357,23 +337,19 @@ main {
   margin: 5% 0 0 43%;
 }
 
-.featured_section_container span:hover {
-  color: gray;
+.featured_section img {
+  height: 100%;
+  width: 95%;
 }
 
-.picture_div {
+.featured_picture_content {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
   height: 35vh;
 }
 
-.featured_section img {
-  height: 100%;
-  width: 95%;
-}
-
-.picture_div div { /* styles for center div */
+.featured_picture_content div { /* styles for center div */
   background-image: url(image/featured_picture_2.jpg);
   background-size: cover;
   width: 95%;
@@ -381,7 +357,7 @@ main {
   overflow: hidden;
 }
 
-.div_div_ {
+.feature_center_div {
   padding: 8%;
   display: flex;
   flex-direction: column;
@@ -389,21 +365,12 @@ main {
   justify-content: center;
 }
 
-.picture_div button {
+.feature_center_div button {
   font-size: 0.8em;
   font-weight: 300;
-  color: white;
-  background-color: #000;
-  border-radius: 1em;
   width: 9vw;
   padding: 2% 0 2% 0;
-  transition: color 0.3s ease;
-  border: none;
   margin-top: 100%;
-}
-
-.picture_div button:hover {
-  color: gray;
 }
 
 /* featured_text */
@@ -418,20 +385,20 @@ main {
   margin-bottom: 5%;
 }
 
-.picture_div h4 {
+.feature_center_div h4 {
   letter-spacing: normal;
   text-transform: none;
   font-size: 1em;
 }
 
-.picture_div p {
+.feature_center_div p {
   margin: 0;
   font-weight: 200;
   font-size: 0.8em;
 }
 
-/* featured_end */
-.our_team {
+/* featured-end */
+.our_team_section {
   display: flex;
   justify-content: center;
 }
@@ -462,7 +429,7 @@ main {
   margin-left: 8%;
 }
 
-.our_team img {
+.our_team_section img, .our_firm_worker_div img {
   width: 80px;
   height: 80px;
   border-radius: 50%;
@@ -487,10 +454,6 @@ main {
 .our_team_hero span {
   cursor: pointer;
   margin-left: 10%;
-}
-
-.our_team_hero span:hover {
-  color: gray;
 }
 
 /* Our_section-end */
@@ -520,10 +483,6 @@ main {
   cursor: pointer;
 }
 
-.pre_footer span:hover {
-  color: gray;
-}
-
 /* Pre_footer-end */
 .footer {
   height: 15vh;
@@ -536,14 +495,11 @@ main {
 
 .left_div {
   width: 80%;
+  font-weight: 200;
 }
 
 .left_div img {
   margin-bottom: 5%;
-}
-
-.left_div {
-  font-weight: 200;
 }
 
 .right_div {
@@ -558,13 +514,10 @@ main {
 }
 
 @media (min-width: 1200px) {
-  .section_h1 {
+  .hero_section {
     height: 70vh;
   }
-  .div_div_ {
-    padding: 12%;
-  }
-  .burger_menu {
+  .hero_left_container .burger_menu {
     display: none;
   }
   .ul_button {
@@ -572,9 +525,6 @@ main {
   }
 }
 @media (max-width: 1200px) {
-  .our_firm span {
-    width: 300%;
-  }
   nav {
     display: none;
     background-color: white;
@@ -589,8 +539,6 @@ main {
     display: none;
   }
   nav ul {
-    list-style: none;
-    padding: 0;
     justify-content: center;
   }
   header li:nth-last-child(2) {
@@ -599,11 +547,11 @@ main {
   .burger_menu.active + nav {
     display: block;
   }
-  .hero_div h1 {
+  .hero_left_container h1 {
     line-height: 90%;
   }
-  .hero_div div {
-    padding: 15vmin 0 0 2vw;
+  .hero_left_container div {
+    padding: 10vmin 0 0 5vw;
   }
 }
 @media (max-width: 900px) {
@@ -625,14 +573,14 @@ main {
   header li:nth-last-child(2) { /* Предпоследний элемент, чтобы не зажимать button в правый угол*/
     margin-right: 8vw;
   }
-  .section_h1 {
+  .hero_section {
     grid-template-rows: 40%;
     grid-template-columns: auto;
   }
-  .section_h1 img {
+  .hero_section img {
     display: none;
   }
-  .hero_div div {
+  .hero_left_container div {
     padding: 15vmin 0 5vmin 10vmin;
   }
   /* Сделать section featured адаптивным при разрешении ниже 900px */
@@ -641,16 +589,10 @@ main {
   }
 }
 @media (max-width: 768px) {
-  .section_h1 {
+  .hero_section {
     grid-template-columns: 1fr;
     grid-template-rows: auto auto;
     gap: 20px;
-  }
-  .our_item p { /* Недоработанный адаптивный дизайн */
-    display: none;
-  }
-  .our_firm_container {
-    flex-direction: column;
   }
   .text p {
     margin-top: 4%;
