--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,3 @@
-/* Максимум который можно вписать в * или в переменные, нужно реализовать
-	1.Понял что очень сложно корректировать код, лучше писать изначально с заделом на поддержку и изменения, как бы это базово не звучало    
-*/ 
-// For all
 * { 
     font-family: "Poppins";
 }
@@ -106,7 +102,7 @@ main {
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: flex-start;
-	padding: 15vmin 0 0 8vmin;
+	padding: 10vmin 0 0 8vmin;
 }
 
 .hero_right_container img {
@@ -132,15 +128,16 @@ main {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	height: 70vh;
+	min-height: 70vh;
+	height: auto;
 }
 
 .our_firm_container {
 	display: flex;
 	width: 50%;
 	height: 80%;
+	padding: 5%;
 }
-// Хочу уменьшить шрифт в media для того чтобы он помещался в container
 
 .our_firm_container span {
 	margin-right: 5%;
@@ -152,7 +149,7 @@ main {
 
 .our_firm_container_div {
 	display: grid;
-	grid-template-rows: repeat(4, 1fr);
+	grid-template-rows: repeat(4, auto);
 }
 
 .our_firm_container_div p:not(:first-child) {
@@ -206,7 +203,6 @@ main {
 
 .our_process {
 	background-color: white;
-	width: 100%;
 	display: flex;
 	align-items: center;
 }
@@ -215,14 +211,13 @@ main {
 	display: flex;	
 	flex-direction: column;
 	align-items: center;
-	margin-top: 10%;
 	font-weight: 200;
 }
 
 .our_process_content {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: auto;
+	grid-template-rows: 1fr;
 }
 
 // Переименовано из our_item
@@ -230,6 +225,11 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	text-align: center;
+}
+
+.our_process_content_div span {
+	margin: 1% 0 1% 0;
 }
 
 .our_process h2 {
@@ -238,12 +238,7 @@ main {
 	font-weight: 300;
 }
 
-.our_process_content_div span {
-	margin: 5% 0 5% 0;
-}
-
 .our_process_content_div p {
-	align-items: center;
 	width: 80%;
 }
 
@@ -251,7 +246,6 @@ main {
 	background-image: url("image/stairs.jpg");
 	background-size: cover;  
 	background-repeat: no-repeat;
-	margin-top: 10%;
 	height: 55vh;
 	display: flex;
 	flex-direction: column;  
@@ -302,13 +296,14 @@ main {
 	font-weight: 200;
 }
 
-.happy_container p {
-	font-weight: 200;
-}
-
-.happy_container h3 {
+.happy_section_container h3 {
 	font-size: 2em;
 	margin-bottom: 4%;
+}
+
+.happy_section_container p {
+	font-weight: 200;
+	width: 90%;
 }
 
 /* happy_section-end */
@@ -337,16 +332,18 @@ main {
 }
 
 .featured_section_container { 
-	display: grid;
-	grid-template-rows: repeat(2, auto); 
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	width: 80%;
 	margin: 5% 0 5% 0;
 }
 
 .featured_section_container span {
+	margin-top: 10px;
 	font-size: 0.8em;
 	cursor: pointer;
-	margin: 5% 0 0 43%;
 }
 
 .featured_section img {
@@ -358,7 +355,7 @@ main {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr); 
 	grid-template-rows: auto;
-	height: 35vh;
+	
 }
 
 .featured_picture_content div { /* styles for center div */
@@ -380,7 +377,9 @@ main {
 .feature_center_div button {
 	font-size: 0.8em;
 	font-weight: 300;
-	width: 9vw; 
+	min-width: 94px; 
+	width: 9vw;
+	flex-shrink: 0;
 	padding: 2% 0 2% 0;
 	margin-top: 100%; // Это чтобы он уперся в дно дива, хм, может есть способ логичнее 
 }
@@ -530,19 +529,22 @@ main {
 
 // Media
 @media (min-width: 1200px) {
-	.hero_section {
-		height: 70vh;
-	}
-	.hero_left_container
+	// header
 	.burger_menu {
 		display: none;
 	}
 	.ul_button {
 		display: none;
 	}
+	// header-end
+
+	.hero_section {
+		height: 70vh;
+	}
 }
 
 @media (max-width: 1200px) {
+	// header
 	nav {
 		display: none;
 		background-color: white;
@@ -559,22 +561,26 @@ main {
 	nav ul {
 		justify-content: center;
 	}
-
 	header li:nth-last-child(2) {  // Чтобы button не лип к li
 		margin-right: 3vw;
 	}
 	.burger_menu.active + nav {
 		display: block;
 	}
+	// header-end
+	
+	// hero_secton
 	.hero_left_container h1 {
 		line-height: 90%;
 	}
 	.hero_left_container div {
 		padding: 10vmin 0 0 5vw;
 	}
+	//hero_section-end
 }
 
-@media (max-width: 900px) {
+@media (max-width: 900px) {	
+	// header 
 	header {
 		grid-template-columns: repeat(2, 1fr);
 	}
@@ -584,7 +590,7 @@ main {
 		font-size: 0.8em;
 		flex-shrink: 0;
 	}
-	ul {
+	header ul {
 		margin-left: 8vw;
 	}
 	header li { // Отступы увеличиваются для удобства нажатия 
@@ -592,63 +598,82 @@ main {
 	}
 	header li:nth-last-child(2) { /* Предпоследний элемент, чтобы не зажимать button в правый угол*/
 		margin-right: 8vw;
-	}	
-	.hero_section {
-		grid-template-rows: 40% ;
-		grid-template-columns: auto;
+	}
+	// header-end
+
+	// hero_section 
+	.hero_section  {
+		grid-template-columns: 1fr;
 	}
 	.hero_section img {
 		display: none;
 	}
 	.hero_left_container div {
-		padding: 15vmin 0 5vmin 10vmin;
+		padding: 5vmin 0 5vmin 15vmin;
 	}
-	/* Сделать section featured адаптивным при разрешении ниже 900px */
-	.div_div_ {
+	// hero_section-end
+	
+	// Our_firm
+	.our_firm_section {
+		min-height: 40vh;
+	}
+	.our_firm_container {
+		flex-direction: column;	
+	}
+	.our_firm_container_div p {
+		margin-top: 4%;
+	}
+	.our_firm_container_div p:not(:first-child, :last-child) {
 		display: none;
 	}
+	.our_firm_worker_div h2 {
+		font-size: 1em;
+	}
+	.our_firm_worker_div p {
+		font-size: 0.8em;
+	}
+	.our_firm_section p:first-child {
+		font-size: 0.9em;
+	}
+	.our_team_section img, .our_firm_worker_div img {
+		width: 60px;
+		height: 60px;
+	}
+	// Our_firm-end
+
+	// Our_process 
+	.our_process {
+		height: auto;
+		justify-content: center;
+		margin: 10% 0 10% 0;
+	}
+	.our_process_content_div p {
+		display: none;
+	}
+	.our_process_content_div span {
+		margin: 5% 0 1% 0;
+	}
+	.our_process_content_div {
+		min-width: 30vw;
+	}
+	// Our_process-end
+
+	// featured_section
+	.featured_section {
+		height: 60vh;
+	}
+	// featured_section-end
 }
 
 @media (max-width: 768px) {
-	.hero_section  {
-		grid-template-columns: 1fr;
-		grid-template-rows: auto auto;
-		gap: 20px;
-	}
-	.text p {
-		margin-top: 4%;
-	}
+	// header
 	header img {
-		width: 30vw;
-	}
-	.featured_section {
-		height: auto;
-	}
-	.featured_section_container {
-		justify-items: center;
-	}
-	.picture_div {
-		grid-template-rows: repeat(3, 1fr);
-		grid-template-columns: auto;
-		height: auto;
-		justify-items: center;
-	}
-	.featured_section img {
-		width: 80%;
-		height: 95%;
-		padding: 1% 0 1% 0;
-	}
-	.picture_div div {
-		width: 80%;
-		height: 95%;
-	}
-	.featured_section_container span {
-		margin: 0;
-	}
+		width: 40vw;
+	}	
 	header li { // При этом разрешении удобочитаемо
 		font-size: 0.8em;
 	}
-	ul {
+	header ul {
 		margin-left: 6vw;
 	}
 	header li { // При этом разрешении отступы нужны меньше
@@ -657,25 +682,101 @@ main {
 	header li:nth-last-child(2) { /* Предпоследний элемент, чтобы не зажимать button в правый угол*/
 		margin-right: 6vw;
 	}
+	// header-end
+
+	// Our_process
+	.our_process_container h2 {
+		font-size: 1.5em;
+	}
+	.our_process_content_div img {
+		width: 70px;
+		height: 60px;
+	}
+	// Our_process-end
+
+	.third_section {
+		height: 40vh;
+	}
+
+	// stairs_section
+	.stairs_section {
+		height: 40vh;
+	}
+	.stairs_section_container p {
+		width: 30vw;
+	}
+	// stairs_section-end
+
+	// happy_section
+	.happy_section_container {
+		height: auto;
+	}
+	.happy_hero p {
+		display: none;
+	}
+	.happy_brand_container {
+		flex-direction: column;
+		margin: none; // Переключаю margin на отдельные элементы кодом ниже 
+	}
+	.happy_brand_container img:not(:last-child) {
+		margin-bottom: 15%;
+	}
+	.happy_brand_container img {
+		width: 120px;
+	}
+	// happy_section-end
 }
 @media (max-width: 600px) {
-	.third_section {
-		align-items: flex-start;
-		padding-left: 5vw;
-	} 
+	// header
 	.ul_button { // Мало места
         display: none;
     }
-}
-@media (max-width: 420px) {
+	// header-end
+	
 	.third_section {
 		align-items: flex-start;
 		padding-left: 5vw;
 	} 
+	
+	// stairs_section
+	.stairs_section {
+		display: flex;
+		justify-content: flex-start;
+	}
+	.stairs_section_container {
+		margin: 5% 0 0 0;
+		width: 80%;
+	}
+	.stairs_section p {
+		width: 80%;
+		font-size: 0.6em;
+	}
+	// stairs_section-end
+
+	// featured_section 
+	.featured_section {
+		height: 50vh;
+	}
+	.featured_picture_content img {
+		display: none;
+	}
+	.featured_picture_content {
+		grid-template-columns: 1fr;
+	}
+	// featured_section-end
+}
+@media (max-width: 420px) {
+	// header 
 	.ul_button {
 		display: none;
 	}
 	header li {
 		margin-right: 4vw
 	}
+	// header-end
+	
+	.third_section {
+		align-items: flex-start;
+		padding-left: 5vw;
+	} 
 }
