--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ main {
   display: flex;
   width: 50%;
   height: 80%;
-  padding: 5%;
+  padding: 5% 5% 5% 10%;
 }
 
 .our_firm_container span {
@@ -182,6 +182,7 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
+  height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -213,6 +214,7 @@ main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
+  width: 100%;
 }
 
 .our_process_content_div {
@@ -245,7 +247,7 @@ main {
   background-image: url("image/stairs.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  height: 55vh;
+  height: 70vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -309,6 +311,7 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
+  height: 70vh;
   display: flex;
   align-items: center;
 }
@@ -322,7 +325,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 70vh;
+  height: auto;
   background-color: #F7F7F7;
 }
 
@@ -562,6 +565,15 @@ main {
   .hero_left_container div {
     padding: 10vmin 0 0 5vw;
   }
+  .third_section {
+    height: 50vh;
+  }
+  .stairs_section {
+    height: 50vh;
+  }
+  .whool_section {
+    height: 50vh;
+  }
 }
 @media (max-width: 900px) {
   header {
@@ -663,9 +675,6 @@ main {
   .third_section {
     height: 40vh;
   }
-  .stairs_section {
-    height: 40vh;
-  }
   .stairs_section_container p {
     width: 30vw;
   }
@@ -744,4 +753,4 @@ main {
   }
 }
 
-/*# sourceMappingURL=styles2.css.map */
+/*# sourceMappingURL=style.css.map */
